# TechTask

./: Demo.ipynb  README.md  bootstrap.sh  milvus-standalone.yml  pyproject.toml  rag-config.yaml
scripts/: inspect_csv.py  inspect_kb.py  inspect_samples.py
src/: db.py  main.py  mocks.py  models.py  preproc.py  prompt.py  rag.py  retriever.py  text_splitter.py
src/eval/: evaluate.py  main.py  utils.py
src/eval/datagen/: synthetic.py
